# Phishing-Website-detection

./: LICENSE  README.md  app.py  pyproject.toml  replit.nix
static/: four.py  index.css  prediction.css
templates/: home.html  index.html  prediction.html
